--- a/test/HeatMap.Tiles.Test.Functional/HeatMap.Tiles.Test.Functional.csproj
+++ b/test/HeatMap.Tiles.Test.Functional/HeatMap.Tiles.Test.Functional.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +13,10 @@
   <ItemGroup>
     <PackageReference Include="NetTopologySuite.IO.GeoJson" Version="2.0.2" />
     <PackageReference Include="NetTopologySuite.IO.VectorTiles.Mapbox" Version="0.0.13" />
-    <PackageReference Include="NetTopologySuite.IO.VectorTiles.GeoJson" Version="0.0.13" />
+    <PackageReference Include="NetTopologySuite.IO.PostGis" Version="2.0.0" />
+    <PackageReference Include="Npgsql" Version="4.1.3.1" />
+    <PackageReference Include="Npgsql.NetTopologySuite" Version="4.1.3" />
+    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
   </ItemGroup>
 
 </Project>
