--- a/src/HeatMap.Tiles.Service/Dockerfile
+++ b/src/HeatMap.Tiles.Service/Dockerfile
@@ -6,6 +6,7 @@ MAINTAINER ANYWAYS BVBA
 # copy api assemblies and files
 RUN mkdir /var/app
 RUN mkdir /var/app/data
+RUN mkdir /var/app/tiles
 RUN mkdir /var/app/logs
 
 # install cron.
@@ -18,6 +19,7 @@ COPY ./bin/release/netcoreapp3.1/publish /var/app
 COPY appsettings.production.json /var/app/appsettings.json
 
 # couple data folder data volume.
+VOLUME ["/var/app/tiles"]
 VOLUME ["/var/app/data"]
 VOLUME ["/var/app/logs"]
 
