--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -20,5 +20,6 @@
         ]
     },
     "connectionString": "Host=bike-data-legacy-do-user-1282652-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Username=doadmin;Password=pjp0hepga63zewda;SSL Mode=Prefer;Trust Server Certificate=true",
-    "path": "/media/xivk/2T-SSD-EXT/temp-dev"
+    "path": "/media/xivk/2T-SSD-EXT/temp",
+    "tiles": "/media/xivk/2T-SSD-EXT/temp/tiles"
 }
