Refactored service with a worker and DI.

--- a/src/HeatMap.Tiles.Service/appsettings.production.json
+++ b/src/HeatMap.Tiles.Service/appsettings.production.json
@@ -20,6 +20,6 @@
         ]
     },
     "connectionString": "Host=bike-data-legacy-do-user-1282652-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Username=doadmin;Password=pjp0hepga63zewda;SSL Mode=Prefer;Trust Server Certificate=true",
-    "path": "/var/app/data",
-    "tiles": "/var/app/tiles"
+    "data": "/var/app/data",
+    "output": "/var/app/tiles"
 }
