--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -19,7 +19,7 @@
             }
         ]
     },
-    "connectionString": "Host=bike-data-legacy-do-user-1282652-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Username=doadmin;Password=pjp0hepga63zewda;SSL Mode=Prefer;Trust Server Certificate=true",
+    "DB": "/data/work/bikedataproject/config/production.txt",
     "data": "/media/xivk/2T-SSD-EXT/temp-dev",
     "output": "/media/xivk/2T-SSD-EXT/temp-dev/tiles"
 }
