--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -20,6 +20,8 @@
         ]
     },
     "DB": "/data/work/bikedataproject/config/production.txt",
+    "MIN_USERS": "3",
+    "MAX_CONTRIBUTIONS": "100",
     "data": "/media/xivk/2T-SSD-EXT/temp-dev",
     "output": "/media/xivk/2T-SSD-EXT/temp-dev/output"
 }
