--- a/src/HeatMap.Tiles.Service/appsettings.production.json
+++ b/src/HeatMap.Tiles.Service/appsettings.production.json
@@ -19,7 +19,9 @@
             }
         ]
     },
-    "connectionString": "Host=bike-data-legacy-do-user-1282652-0.a.db.ondigitalocean.com;Port=25060;Database=defaultdb;Username=doadmin;Password=pjp0hepga63zewda;SSL Mode=Prefer;Trust Server Certificate=true",
+    "DB": "/data/work/bikedataproject/config/production.txt",
+    "MIN_USERS": "3",
+    "MAX_CONTRIBUTIONS": "100",
     "data": "/var/app/data",
     "output": "/var/app/tiles"
 }
