Refactoring, bugfixing and testing.

--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -4,7 +4,7 @@
             "Serilog.Sinks.File",
             "Serilog.Sinks.Console"
         ],
-        "MinimumLevel": "Verbose",
+        "MinimumLevel": "Debug",
         "WriteTo": [
             {
                 "Name": "File",
@@ -23,5 +23,5 @@
     "MIN_USERS": "3",
     "MAX_CONTRIBUTIONS": "1000",
     "data": "/media/xivk/2T-SSD-EXT/temp-dev",
-    "output": "/media/xivk/2T-SSD-EXT/temp-dev/output"
+    "output": "/media/xivk/2T-SSD-EXT/temp-tiles-ssh-mapped/"
 }
