Log only important messages!

--- a/src/HeatMap.Tiles.Service/appsettings.production.json
+++ b/src/HeatMap.Tiles.Service/appsettings.production.json
@@ -4,7 +4,7 @@
             "Serilog.Sinks.File",
             "Serilog.Sinks.Console"
         ],
-        "MinimumLevel": "Verbose",
+        "MinimumLevel": "Information",
         "WriteTo": [
             {
                 "Name": "File",
