--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -20,8 +20,9 @@
         ]
     },
     "DB": "/data/work/bikedataproject/config/production.txt",
-    "MIN_USERS": "3",
+    "MIN_USERS": "2",
     "MAX_CONTRIBUTIONS": "10",
     "data": "/media/xivk/2T-SSD-EXT/temp-dev",
-    "output": "/media/xivk/2T-SSD-EXT/temp-dev-output/"
+    "output": "/media/xivk/2T-SSD-EXT/temp-dev-output/",
+    "refresh-time": 1000
 }
