Use a single heatmap.

--- a/src/HeatMap.Tiles.Service/appsettings.json
+++ b/src/HeatMap.Tiles.Service/appsettings.json
@@ -20,9 +20,8 @@
         ]
     },
     "DB": "/data/work/bikedataproject/config/production.txt",
-    "MIN_USERS": "2",
+    "MIN_USERS": "3",
     "MAX_CONTRIBUTIONS": "10",
     "data": "/media/xivk/2T-SSD-EXT/temp-dev",
-    "output": "/media/xivk/2T-SSD-EXT/temp-dev-output/",
-    "refresh-time": 1000
+    "output": "/media/xivk/2T-SSD-EXT/temp-dev-output/"
 }
