--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -3,8 +3,6 @@ name: Staging
 on:
   push:
     branches: [ develop ]
-  pull_request:
-    branches: []
 
 jobs:
 
@@ -31,7 +29,7 @@ jobs:
       run: docker build . --file Dockerfile --tag bikedataproject/heatmap-tiles-service:staging
       working-directory: ./src/HeatMap.Tiles.Service/
     - name: Login to Dock Hub
-      run: echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login -u anywaysopen --password-stdin
+      run: echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login -u anywaysbot --password-stdin
     - name: Publish the image to GitHub packages.
       run: docker push bikedataproject/heatmap-tiles-service:staging
       working-directory: ./src/HeatMap.Tiles.Service/
